--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,143 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar {
+  height: 70px;
+  background-color: orange;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.navbar--logo{
+  display: flex;
+  align-items: center;
+  margin: 0 2rem;
+  font-size: 30px;
+}
+
+li {
+  list-style-type: none;
+}
+.navbar--links {
+  display: flex;
+  flex-direction: row;
+}
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
+.items {
+  margin: 0 1rem;
+  display: flex;
+  align-items: center;
+  transition: all .2s ease-in-out;
+}
+
+.items :hover{
+  color: rgb(233, 223, 223);
+}
+
+.container {
+  height: calc(100vh - 70px);
+  position: relative;
+}
+
+.intro {
+  display: flex;
+  height: calc(100vh - 300px);
+}
+
+.i-left {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.i-right {
+  flex: 1;
+}
+
+.i-left-wrapper {
+  padding: 50px;
+  height: 40%;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: space-between; */
+}
+
+.i-intro {
+  font-size: 30px;
+  font-weight: 300;
+}
+
+.i-name {
+  font-size: 60px;
+}
+
+.i-description {
+  margin: 1rem 0;
+  font-size: 20px;
+}
+
+.i-title {
+  height: 50px;
+  overflow: hidden;
+}
+
+.i-title-item {
+  height: 50px;
+  font-size: 30px;
+  font-weight: bold;
+  color: green;
+  display: flex;
+  align-items: center;
+}
+
+.i-title-wrapper {
+  height: 100%;
+  animation: move 10s ease-in-out infinite alternate;
+  overflow: visible;
+}
+@keyframes move {
+  50% {
+    transform: translateY(-50px);
+  }
+  100% {
+    transform: translateY(-100px);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.footer{
+  /* Maybe this is wrong. IDK */
+  height: 150px;
+}
+
+.button-links {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.social-links{
+  display: flex;
+  flex-direction: row;
+  margin: 5rem;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.social-link-item{
+  margin: 1rem;
 }
+
+
